hphp/test/slow/phpism/ltgt.php.expectf
Fatal error: An expression is expected here. in %s/hphp/test/slow/phpism/ltgt.php on line 4
